<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".IntentionalEndActivity">

    <ImageView
        android:id="@+id/hero_img1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/dcnyc_group"
        android:transitionName="@string/trans_hero1"/>

    <TextView
        android:id="@+id/viewab_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hero_img1"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="8dp"
        android:text="@string/mat_princpl_intentional"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:transitionName="@string/trans_mat_title"/>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewab_title"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/icon_livestream"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:src="@drawable/vct_livestream"
            android:transitionName="@string/trans_livestream"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="@string/mater_motion_sentence"
            android:textSize="13sp"
            android:transitionName="@string/trans_mat_text"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_bottom"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/glyph_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear1"
            android:text="@string/shared_stage"
            android:layout_weight="2"
            android:transitionName="@string/trans_glyph_text"/>

        <ImageView
            android:id="@+id/glyph_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:layout_weight="1"
            android:src="@drawable/ic_glyph_sm"
            android:transitionName="@string/trans_glyph_img"/>

    </LinearLayout>

    <TextView
        android:id="@+id/glyph_text_alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/multiple_elements_transition" />


</RelativeLayout>

