<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/matmotion_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/mater_motion_sentence"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

            <TextView
                android:id="@+id/matmotion_learnmorelink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="https://material.google.com/motion"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrimaryDark"/>

            <ImageView
                android:id="@+id/mat_motion_vid"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:scaleType="centerInside"
                android:src="@drawable/mat_motion_vid"/>

            <TextView
                android:id="@+id/matmotion_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/mater_mation_characteristics"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/matcharac_layout1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/card_size_unexpand"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/bg_selector"
                        android:animateLayoutChanges="true"
                        android:clickable="true"
                        android:orientation="vertical"
                        android:stateListAnimator="@animator/raise">

                        <TextView
                            android:id="@+id/matcharac_title1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/responsive"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                        <TextView
                            android:id="@+id/matcharac_text1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:maxLines="1"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:text="@string/mat_charac_responsive"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:transitionName="@string/trans_charac1"/>

                        <ImageView
                            android:id="@+id/matcharac_morebtn1"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="right|bottom"
                            android:layout_margin="8dp"
                            android:src="@drawable/vct_expand"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/matcharac_layout3"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/card_size_unexpand"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/bg_selector"
                        android:clickable="true"
                        android:orientation="vertical"
                        android:stateListAnimator="@animator/raise">

                        <TextView
                            android:id="@+id/matcharac_title3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/natural"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                        <TextView
                            android:id="@+id/matcharac_text3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:maxLines="1"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:text="@string/mat_charac_natural"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:transitionName="@string/trans_charac3"/>

                        <ImageView
                            android:id="@+id/matcharac_morebtn3"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="right|bottom"
                            android:layout_margin="8dp"
                            android:src="@drawable/vct_expand"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/matcharac_layout2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/card_size_unexpand"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/bg_selector"
                        android:clickable="true"
                        android:orientation="vertical"
                        android:stateListAnimator="@animator/raise">

                        <TextView
                            android:id="@+id/matcharac_title2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/aware"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                        <TextView
                            android:id="@+id/matcharac_text2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:maxLines="1"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:text="@string/mat_charac_aware"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:transitionName="@string/trans_charac2"/>

                        <ImageView
                            android:id="@+id/matcharac_morebtn2"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="right|bottom"
                            android:layout_margin="8dp"
                            android:src="@drawable/vct_expand"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/matcharac_layout4"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/card_size_unexpand"
                        android:background="@drawable/bg_selector"
                        android:clickable="true"
                        android:orientation="vertical"
                        android:stateListAnimator="@animator/raise"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp">


                        <TextView
                            android:id="@+id/matcharac_title4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/intentional"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                        <TextView
                            android:id="@+id/matcharac_text4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:maxLines="1"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:text="@string/mat_charac_intentional"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:transitionName="@string/trans_charac4"/>

                        <ImageView
                            android:id="@+id/matcharac_morebtn4"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="right|bottom"
                            android:layout_margin="8dp"
                            android:src="@drawable/vct_expand"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>

